fix: added .env file for docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ services:
   db:
     image: postgres:13
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydatabase
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U user -d mydatabase" ]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
       interval: 5s
       timeout: 10s
       retries: 5
@@ -17,7 +17,7 @@ services:
     image: migrate/migrate:4
     command: [
       "-path=/migrations",
-      "-database=postgres://user:password@db:5432/mydatabase?sslmode=disable",
+      "-database=postgres://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=${DB_SSLMODE}",
       "up"
     ]
     volumes:
@@ -33,9 +33,9 @@ services:
       context: .
       dockerfile: subscriptions_backend/Dockerfile
     environment:
-      DB_CONN_STR: "postgres://user:password@db:5432/mydatabase?sslmode=disable"
+      DB_CONN_STR: "postgres://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=${DB_SSLMODE}"
     ports:
-      - "8080:8080"
+      - "${APP_PORT}:8080"
     depends_on:
       db:
         condition: service_healthy
